Fixed some navbar links/page. Adding logout functionality. DB doesn't seem to connect locally.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Voter</title>
   </head>
-  <body>
+  <body style="background: #000b1a">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
